# Sense_It

./: CMakeLists.txt  README.md
SensorNetwork/: SensorNetwork.ino
src/: CMakeLists.txt  main.c
src/headers/: PulsePWM.h  ReadFromADC.h  i2c_main.H
